test/integration/bad/tuples/stanc.expected
  $ ../../../../../install/default/bin/stanc array_literal_mismatch.stan
Semantic error in 'array_literal_mismatch.stan', line 2, column 43 to column 52:
   -------------------------------------------------
     1:  transformed data {
     2:    array[2] tuple(real, real) x = {(1, 2) , (3, 4, 5)};
                                                    ^
     3:  }
   -------------------------------------------------

Array expression must have entries of consistent type. Expected tuple(
int, int) but found tuple(int, int, int).
  $ ../../../../../install/default/bin/stanc bad-arg.stan
Syntax error in 'bad-arg.stan', line 2, column 23 to column 27, parsing error:
   -------------------------------------------------
     1:  functions {
     2:    void foo(tuple(real, data real) x) {
                                ^
     3:      print(x.1);
     4:    }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc bad-index1.stan
Semantic error in 'bad-index1.stan', line 3, column 9 to column 12:
   -------------------------------------------------
     1:  transformed data {
     2:     real x = 3.4;
     3:     print(x.1);
                  ^
     4:  }
   -------------------------------------------------

Tried to index a non-tuple type. Expression has type real.
  $ ../../../../../install/default/bin/stanc bad-index2.stan
Semantic error in 'bad-index2.stan', line 3, column 11 to column 17:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    real x = pair.3;
                    ^
     4:  }
   -------------------------------------------------

Tried to access index 3 for a tuple of length 2.
Only indices indices between 1 and 2 are valid.
  $ ../../../../../install/default/bin/stanc bad-index3.stan
Semantic error in 'bad-index3.stan', line 3, column 3 to column 6:
   -------------------------------------------------
     1:  transformed data {
     2:     real x = 3.14;
     3:     x.1 = 6.28;
            ^
     4:  }
   -------------------------------------------------

Tried to index a non-tuple type. Expression has type real.
  $ ../../../../../install/default/bin/stanc bad-index4.stan
Semantic error in 'bad-index4.stan', line 3, column 2 to column 8:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    pair.3 = 6.28;
           ^
     4:  }
   -------------------------------------------------

Tried to access index 3 for a tuple of length 2.
Only indices indices between 1 and 2 are valid.
  $ ../../../../../install/default/bin/stanc bad-index5.stan
Semantic error in 'bad-index5.stan', line 3, column 11 to column 18:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, real) pair = (3.14, 34.2);
     3:    real x = pair[1];
                    ^
     4:  }
   -------------------------------------------------

Too many indexes, expression dimensions=0, indexes found=1.
  $ ../../../../../install/default/bin/stanc bad_addition.stan
Semantic error in 'bad_addition.stan', line 3, column 2 to column 9:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) z;
     3:    z += 1;
           ^
     4:  }
   -------------------------------------------------

Ill-typed arguments supplied to assignment operator +=: lhs has type tuple(
real, real) and rhs has type int.
Available signatures for given lhs:
No matching signatures
  $ ../../../../../install/default/bin/stanc empty_tuple_expr.stan
Syntax error in 'empty_tuple_expr.stan', line 2, column 25 to column 26, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real, real) y = ();
                                  ^
     3:  }
   -------------------------------------------------

Expression or comma separated list of expressions followed by ")" expected after "(".
  $ ../../../../../install/default/bin/stanc empty_tuple_type.stan
Syntax error in 'empty_tuple_type.stan', line 2, column 8 to column 9, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple() y = ();
                 ^
     3:  }
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc function-mismatch1.stan
Semantic error in 'function-mismatch1.stan', line 8, column 2 to column 17:
   -------------------------------------------------
     6:  
     7:  model {
     8:    foo((1, 2, 3));
           ^
     9:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(int, int, int))
Available signatures:
(tuple(real, real)) => void
  The first argument must be tuple(real, real) but got tuple(int, int, int)
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx1.stan
Syntax error in 'fuzz-tuple-idx1.stan', line 1, column 36 to column 58, parsing error:
   -------------------------------------------------
     1:  functions{void f(tuple(matrix,int)t)t.40000000000000000000
                                             ^
   -------------------------------------------------

Failed to parse integer from string '.40000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx2.stan
Syntax error in 'fuzz-tuple-idx2.stan', line 1, column 61 to column 83, parsing error:
   -------------------------------------------------
     1:  transformed data{tuple(array[0]tuple(int,array[0]real),int)x;x.10000000000000000000
                                                                      ^
   -------------------------------------------------

Failed to parse integer from string '.10000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc fuzz-tuple-idx3.stan
Syntax error in 'fuzz-tuple-idx3.stan', line 1, column 45 to column 66, parsing error:
   -------------------------------------------------
     1:  transformed data{matrix[0,0]v;row_vector[0]m;m.6000000000000000000
                                                      ^
   -------------------------------------------------

Failed to parse integer from string '.6000000000000000000' in tuple index. 
The index is likely too large.
  $ ../../../../../install/default/bin/stanc incomplete1.stan
Syntax error in 'incomplete1.stan', line 2, column 30 to column 35, parsing error:
   -------------------------------------------------
     1:  data {
     2:    tuple( array [ foo ] real , while
                                       ^
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete2.stan
Syntax error in 'incomplete2.stan', line 1, column 33 to column 36, parsing error:
   -------------------------------------------------
     1:  data { tuple( array [ foo ] real foo
                                          ^
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete3.stan
Syntax error in 'incomplete3.stan', line 2, column 0 to column 0, parsing error:
   -------------------------------------------------
     1:  model { tuple( complex , complex ) foo,
         ^
   -------------------------------------------------

Expected a new identifier after comma in declaration.
All variables declared must be of the same type, and any initializing assignment must follow the identifier before the next comma.
  $ ../../../../../install/default/bin/stanc incomplete4.stan
Syntax error in 'incomplete4.stan', line 2, column 45 to column 50, parsing error:
   -------------------------------------------------
     1:  data {
     2:      tuple( real , tuple( complex , complex ) while
                                                      ^
   -------------------------------------------------

Incomplete type specification. Expected either ")" or "," followed by
further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc incomplete5.stan
Syntax error in 'incomplete5.stan', line 1, column 14 to column 19, parsing error:
   -------------------------------------------------
     1:  data { tuple( while
                       ^
   -------------------------------------------------

Incomplete type declaration. Expected comma separated list of types between "("
and ")" to declare tuple variable.
  $ ../../../../../install/default/bin/stanc incomplete6.stan
Syntax error in 'incomplete6.stan', line 2, column 30 to column 31, parsing error:
   -------------------------------------------------
     1:  transformed data {
     2:    tuple(real, int) x = (3.5, 4;
                                       ^
   -------------------------------------------------

Ill-formed phrase. Found an expression. This can be followed by a ",", a "}", a ")", a "]", a "[" or an infix or postfix operator.
  $ ../../../../../install/default/bin/stanc incomplete7.stan
Syntax error in 'incomplete7.stan', line 2, column 20 to column 21, parsing error:
   -------------------------------------------------
     1:  functions {
     2:     tuple(real, int, ) foo()
                             ^
     3:  }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc onepl_expr.stan
Syntax error in 'onepl_expr.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  model {
     2:    print((3.5,));
                      ^
     3:  }
   -------------------------------------------------

Expression or comma separated list of expressions followed by ")" expected after "(".
  $ ../../../../../install/default/bin/stanc onepl_type.stan
Syntax error in 'onepl_type.stan', line 2, column 22 to column 23, parsing error:
   -------------------------------------------------
     1:  functions {
     2:    void foo(tuple(real,) x) {
                               ^
     3:      return;
     4:    }
   -------------------------------------------------

Expected comma-separated list of types followed by ")" to declare tuple type.
  $ ../../../../../install/default/bin/stanc onepl_type2.stan
Syntax error in 'onepl_type2.stan', line 2, column 13 to column 14, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real,) x;
                      ^
     3:  }
   -------------------------------------------------

Incomplete type specification, expected further types followed by ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc onepl_type_missing_comma.stan
Syntax error in 'onepl_type_missing_comma.stan', line 2, column 12 to column 13, parsing error:
   -------------------------------------------------
     1:  model {
     2:    tuple(real) y = (1,);
                     ^
     3:  }
   -------------------------------------------------

Invalid type specification, unmatched "(".
Expected "," followed by further types and ")" to complete tuple.
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad.stan
Semantic error in 'tuple-dataonly-ad.stan', line 13, column 12 to column 19:
   -------------------------------------------------
    11:  
    12:  model {
    13:    target += foo(ps);
                     ^
    14:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple-dataonly-ad2.stan
Semantic error in 'tuple-dataonly-ad2.stan', line 17, column 12 to column 24:
   -------------------------------------------------
    15:  
    16:  model {
    17:    target += foo((x1,x2));
                     ^
    18:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'foo':
(tuple(real, real))
Available signatures:
(data tuple(real, real)) => real
  The first argument must be data-only. (Local variables are assumed to
  depend on parameters; same goes for function inputs unless they are marked
  with the keyword 'data'.)
  $ ../../../../../install/default/bin/stanc tuple_ternary.stan
Semantic error in 'tuple_ternary.stan', line 2, column 25 to column 47:
   -------------------------------------------------
     1:  transformed data {
     2:     tuple(real, real) x = 1 ? (1, 2) : (3, 4, 5);
                                  ^
     3:  }
   -------------------------------------------------

Type mismatch in ternary expression, expression when true is: tuple(int, int); expression when false is: tuple(
int, int, int)
